# dosyalab

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: main.py
apps/api/migrations/: env.py
apps/api/tests/: conftest.py  test_admin_auth_and_endpoints.py  test_build_spec.py  test_cleanup_sweep.py  test_conversion_job_concurrency.py  test_conversion_job_instrumentation.py  test_conversion_module_verify_default.py  test_conversion_spec.py  test_convert_compress_endpoint.py  test_convert_delete_pages_endpoint.py  test_convert_docx_endpoint.py  test_convert_endpoint.py  test_convert_extract_images_endpoint.py  test_convert_extract_pages_endpoint.py  test_convert_extract_text_endpoint.py  test_convert_images_endpoint.py  test_convert_merge_endpoint.py  test_convert_pdf_to_images_endpoint.py  test_convert_protect_endpoint.py  test_convert_reorder_pages_endpoint.py  test_convert_rotate_endpoint.py  test_convert_split_endpoint.py  test_convert_unlock_endpoint.py  test_convert_watermark_endpoint.py  test_convert_xlsx_endpoint.py  test_docx_to_pdf_converter.py  test_docx_to_pdf_timeout.py  test_docx_to_pdf_verify.py  test_docx_validation.py  test_error_code_api_leakage.py  test_execution_runtime.py  test_failure_taxonomy.py  test_feedback_endpoint.py  test_health.py  test_images_to_pdf_converter.py  test_maintenance_mode.py  test_operations_events.py  test_operations_events_integration.py  (+13 more)
(+187 files in other folders)
