[project]
name = "formatflow-api"
version = "0.1.0"
description = "FormatFlow backend — FastAPI service for document conversion"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends()` in argument defaults is the intended pattern, not a bug.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
